# pkgDB

./: README.md  \  create_db.sh  extract_license.py  license_insert_db.py  models.py  packages.db  pyproject.toml  restapi.py
backup/: binaries-pkg-licenses.json  sources-pkg-licenses.json
scripts/: Readme.md  download_pkgs_meta.sh  packages.db  parse_insert_db.py  run_api_server.sh
src/pkgDB/: Readme.md  extract_license.py  license_insert_db.py  parse_insert_db.py  query_db.py  restapi.py
src/pkgDB/data/: README.md
src/pkgDB/data/db/: packages.db
src/pkgDB/data/json/: apt_pkg_source_url.json
tests/: Readme.md
